--- a/01_an_outline_dhtml_file.html
+++ b/01_an_outline_dhtml_file.html
@@ -1,4 +1,7 @@
-<!-- See also: https://www.w3schools.com/html/html_intro.asp -->
+<!-- See also: -->
+<!-- 1: https://www.w3schools.com/html/html_intro.asp -->
+<!-- 2: https://en.wikipedia.org/wiki/Dynamic_HTML -->
+
 <!doctype html>
 <html>
   
